force-app/main/default/objects/VRT_Invoice__c/VRT_Invoice__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Factura Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>