force-app/main/default/objects/VRT_Invoice__c/fields/VRT_CUR_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>VRT_CUR_TotalAmount__c</fullName>
    <label>Importe Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>