force-app/main/default/objects/VRT_Invoice__c/fields/VRT_DAT_IssueDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_IssueDate__c</fullName>
    <description>fecha de emision de la factura</description>
    <label>Fecha de Emision</label>
    <required>true</required>
    <type>Date</type>
</CustomField>