force-app/main/default/objects/VRT_Invoice__c/fields/VRT_LKP_Account__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>