force-app/main/default/objects/VRT_Invoice__c/fields/VRT_SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Status__c</fullName>
    <defaultValue>&quot;Emitida&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>