force-app/main/default/objects/VRT_Invoice__c/fields/VRT_TXT_Notes__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Notes__c</fullName>
    <label>Observacioines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>